TODO
	* : Implement blur effect, maybe? 

2024-02-20
	* src/input.c: Enable tap to click for touchpad inputs
	* src/config.c: Add config to enable tap to click
	* config/configrc: Add config to enable tap to click (touchpad_tap_click)
	* Makefile: Add libinput to linked library

2024-02-01
	* Makefile: clean up, make it easier to switch on/off XWAYLAND support

2024-01-31
	* config.c: Added xkb_layout and xkb_options
	* config.c: Bug fix. skip setting config_file_name when readConfiguration() is called from
	reloadConfiguration()
	* config/configrc: Fix buttons in mouse bindings (Button1 = Button_Left etc)
	* server.c: Added interface to activate urgency hints
	* ipc.c: Send tag flag with urgent clients
	* client.c: Set initial client position based on the cursor position
	* Makefile: Add install and uninstall scripts

2024-01-19
	* config.c: Remove unused config tag_names
	* config.c: Add reloadConfig() to reload config file
	* action.c: Add reconfig option to process_ipc_action(). This will enable reloading of config file from simplewc-msg
	* input.c: Fix a bug where focus_client() is called with each process_cursor_motion() when sloppy_focus=true 
	* globals.h: change name from CURSOR_PASSTHROUGH to CURSOR_NORMAL
	* config.c: remove AUTOSTART as wl_list. Create autostart a reference to a script that will execute on launch
	* config/autostart.sh: create autostart script
	* main.c: Colorize the log output 
	* layer.c: give input to layer surface upon map. Give next client input focus upon destroy
	* input.c: Fix a bug causing seg fault when moving drag icon out of a client

2024-01-14
	* dwl-ipc-unstable-v2.xml: add send_action request to allow ipc client to send actions
	* ipc.c: implement send_action request call
	* util/simplewc-msg.c: Allow send_action request call through "--action" flag
	* action.c: add process_ipc_action() function
	* config.c: add LOCK function and lock_cmd entries
	* config/configrc: add lock_cmd entry